<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <GVL Name="Global" Id="{c27aced4-be9c-4dab-babe-a5494623c001}">
    <Declaration><![CDATA[VAR_GLOBAL
	/// instance array of all controller instances
	g_a_pCtrlInst: ARRAY[0..E_CtrlId.E_CtrlIdMax] OF POINTER TO fb_CtrlBase;
	/// common interface array of all controllers (main use for PLC)
	g_a_pCtrlCIf: ARRAY[0..E_CtrlId.E_CtrlIdMax] OF POINTER TO T_Ctrl_CIf;
	/// common access variabel for UI
	g_p_fbAlm_Man: POINTER TO FB_Alm_Man;
	/// Global array for function with different childs in faster cycles
	g_a_pFunRFD: ARRAY[0..9] OF POINTER TO FB_RFR;
	/// For StartUp order
	g_uinStartProzess: UINT;
	/// Count of Task Classes
	c_uinCntTaskClass: UINT := 3;
END_VAR]]></Declaration>
    <ObjectProperties>﻿<XmlArchive>
  <Data>
    <o xml:space="preserve" t="FileLink">
      <v n="FileName">""</v>
      <v n="LinkType" t="LinkType">ExportBeforeCompile</v>
      <v n="lTimeStamp">0L</v>
    </o>
  </Data>
  <TypeList>
    <Type n="FileLink">{0e9188e9-4f07-4676-afb5-399bcddbc44b}</Type>
    <Type n="Int64">System.Int64</Type>
    <Type n="LinkType">{926664ef-7286-4d12-8220-5000ab511fa6}</Type>
    <Type n="String">System.String</Type>
  </TypeList>
</XmlArchive></ObjectProperties>
  </GVL>
</TcPlcObject>