<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="E_Typ_DRV" Id="{f66c700e-dd0a-481c-b497-f268f044f5b7}">
    <Declaration><![CDATA[TYPE E_Typ_DRV :
(
	None := 0,
	TLP,
	TLK,
	TLKV,
	TLPsort,
	TLS,
	TLC,
	Max_E_Typ_JUN
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>