<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_DRV_Par" Id="{c1a80b26-8fb2-4f88-b106-e6120ad6338d}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_DRV_Par :
STRUCT
	/// [ms] Timeout supervision of pulse in RUN
	udi_pulseTimeout_ms: UDINT;
	/// [ms] Simulation of pulse in RUN: 0.676mm/ms / 38.4mm/puls => 56.8ms/puls
	udi_pulseSim_ms: UDINT;
	/// 0=slow, 1=middle, 2=fast
	usi_speedLevel: USINT;
	/// Maximum Broken Pins
	int_MaxBrokenPins: INT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>