<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_STB" Id="{17d83a28-bf95-4073-9f88-d715e01ee415}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_STB :
STRUCT
	/// configuration
	Cfg: T_Ctrl_SIf_STB_Cfg;
	/// parameter
	Par: T_Ctrl_SIf_STB_Par;
	/// current values
	Cur: T_Ctrl_SIf_STB_Cur;
	/// io input
	In: T_Ctrl_SIf_STB_In;
	/// io output
	Out: T_Ctrl_SIf_STB_Out;
	/// alarm number used in this controller
	Alm: ARRAY[1..3] OF T_Ctrl_Alm;
	/// interlock of output/movements
	Ilk: T_Ctrl_SIf_STB_Ilk;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>