<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_STB_Cfg" Id="{aba2538b-3503-41c0-8933-95803648372f}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_STB_Cfg :
STRUCT
	/// Has buffer full sensor (optional)
	bolHasBufferFullSensor: BOOL;
	/// Has hanger detection sensor
	bolHasHangerDetection: BOOL;
	/// Max. buffer capacity
	dinMaxCapacity: DINT;
	/// Number of passing hangers per pulse
	uinNumOfHangersPerPulse: UINT;
	/// max number of hangers detected in STOP if bolCylPosLostMonitoring activated until an error occures
	dinMaxNumOfHangers_PosMonitoring: DINT;
	/// Enable cylinder position lost monitoring
	bolCylPosLostMonitoring: BOOL;
	/// to release all work with puleses and counts or use time to release
	bolReleaseAllNonPulse: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>