<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="E_Typ_MER_AUTO_MODE" Id="{83d003ce-2cce-43c6-9d83-316031bbc2b9}">
    <Declaration><![CDATA[TYPE E_Typ_MER_AUTO_MODE :
(
	/// 0= Merge over time 	
	MergeOverTime := 0,
	/// 1= Merge over setpoint (number of hangers)
	MergeOverSetpoint,
	/// 2= Merge into a transport belt (this mode can only be used if signals from pin- and hanger-detection sensor are exist) 
	MergeIntoTrp
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>