<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_MER" Id="{6c5d64ed-5207-4e4f-ab7a-e17d07f91eb6}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_MER :
STRUCT
	/// configuration
	Cfg: T_Ctrl_SIf_MER_Cfg;
	/// parameter
	Par: T_Ctrl_SIf_MER_Par;
	/// current values
	Cur: T_Ctrl_SIf_MER_Cur;
	/// io input
	In: T_Ctrl_SIf_MER_In;
	/// io output
	/// ...no physical Output
	/// alarm number used in this controller
	Alm: ARRAY[1..3] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>