<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_MER_Cfg" Id="{e3b17a9a-7904-4fdf-99ae-5022863311ce}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_MER_Cfg :
STRUCT
	/// Merger main mode
	usiMergeMainMode: E_Typ_MER_MODE;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>