<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_MER_Par" Id="{a055d543-07f2-43db-9603-bb299014ac3d}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_MER_Par :
STRUCT
	/// Setpoint, line number to release all from parent in case if main mode "OnCommand" is selected. (1 -> X)
	usiLineNumToReleaseAll: USINT;
	/// List of parameters for Line 1 -> X
	a_LinePar: ARRAY[0..Base_Const.cMaxNrOfChilds] OF T_Line;
	/// [um] Pin Lenght
	dinPinLenght_um: DINT;
	/// [um] Section Lenght
	dinSectionLenght_um: DINT;
	/// [um] Trigger start offset
	dinTrigStartOffset_um: DINT;
	/// [um] Trigger end offset
	dinTrigEndOffset_um: DINT;
	/// [um] Hanger Detection Sensor Position (measured from ZEROPOINT)
	dinHangerSensorPosition_um: DINT;
	/// [ms] Timeout jam sensor in RUN
	udi_jamTimeout_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>