<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Line" Id="{79e8808a-0a00-4e7b-b2e1-5a4e9d57b6bd}">
    <Declaration><![CDATA[TYPE T_Line :
STRUCT
	/// Merge-mode
	usiMergeMode: E_Typ_MER_AUTO_MODE;
	/// [ms] Time, how long hangers are merged from sub- into the main line.
	udiMergingTime_ms: UDINT;
	/// Setpoint, how many hangers should merged from sub- into the main line.
	uinNumOfHangersToMerge: UINT;
	/// [ms] Wait time until the line is free before release the next line to prevent hanger collision.
	udiWaitTimeLineFree_ms: UDINT;
	/// [um] position from the line (must be measured, starts at pin sensor [zero pos], ends at the point where the line comes in the transport)
	dinLinePosition_um: DINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>